# wlroots

./: .gitlab-ci.yml  CONTRIBUTING.md  meson.build  meson.options
.builds/: alpine.yml
backend/: backend.c  meson.build
backend/drm/: atomic.c  backend.c  color.c  drm.c  fb.c  legacy.c  libliftoff.c  meson.build  properties.c  renderer.c  util.c
backend/libinput/: backend.c  meson.build  switch.c
backend/session/: meson.build  session.c  session_libudev.c  session_openbsd.c
backend/wayland/: backend.c  output.c  pointer.c  seat.c  tablet_v2.c
backend/wscons/: backend.c  meson.build
compat/linux/: input-event-codes.h  input.h
docs/: env_vars.md
examples/: cairo-buffer.c  output-layers.c  output-layout.c  pointer.c  rotation.c  scene-graph.c  simple.c  tablet.c  touch.c
include/: meson.build
protocol/: ext-action-binder-v1.xml  meson.build  wlr-output-power-management-unstable-v1.xml
render/: color.c  drm_syncobj.c  egl.c  gen_pixel_format.sh  meson.build  pixel_format.c  pixel_format_table.c
test/: bench_scene.c
tinywl/: tinywl.c
types/: meson.build  wlr_action_binder_v1.c  wlr_color_management_v1.c  wlr_commit_timing_v1.c  wlr_compositor.c  wlr_drm_lease_v1.c  wlr_ext_image_copy_capture_v1.c  wlr_keyboard.c  wlr_linux_dmabuf_v1.c  wlr_linux_drm_syncobj_v1.c  wlr_output_group.c  wlr_output_layout.c  wlr_output_power_management_v1.c  wlr_output_swapchain_manager.c  wlr_screencopy_v1.c  wlr_xdg_output_v1.c  wlr_xdg_session_management_v1.c  wlr_xdg_toplevel_drag_v1.c
util/: box.c  meson.build  region.c  shm.c  time.c
xwayland/: sockets.c
(+65 files in other folders)
